# cosmic-updates

./: .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  PKGBUILD  README.md  SECURITY.md  SYSTEM76_APPROVAL.md  TODO.md  apt-ftparchive.conf  build-deb.sh  build-local-install.sh  clean_build.sh  com.vintagetechie.CosmicExtPackageUpdates.desktop  com.vintagetechie.CosmicUpdates.desktop  cosmic-ext-applet-updates-keyring.asc  cosmic-updates-keyring.asc  dev.vintagetechie.CosmicAptChecker.desktop  fix-ign-warnings.sh  justfile  make-release.sh  publish-to-ppm.sh
.gitea/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cosmic-ext-applet-updates_1.1.0_amd64/DEBIAN/: control  postinst
cosmic-ext-applet-updates_1.1.0_amd64/usr/share/applications/: com.vintagetechie.CosmicExtAppletUpdates.desktop
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages
src/: config.rs  main.rs  state.rs  utils.rs
src/package_manager/: apt.rs  mod.rs  pacman.rs  paru.rs  yay.rs
