[package]
name = "cosmic-updates"
version = "1.0.0"
edition = "2021"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", features = ["applet"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"

[profile.release]
opt-level = 3
lto = true
