[package]
name = "cosmic-ext-applet-updates"
version = "1.1.2"
edition = "2021"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", features = ["applet"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
notify-rust = "4"

[profile.release]
opt-level = 3
lto = true
